--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "bat": ".bat",
         "powershell": ".ps1",
         "typescript": ".ts"
+    },
+    "files.associations": {
+        "stdio.h": "c"
     }
 }
